# nom_fun

./: Cargo.toml  README.md
assets/: Intervals.txt  Move_2018_12_17_06_59_29_Running.fit  Move_2018_12_17_06_59_29_Running.kml  Move_2018_12_17_06_59_29_Running.xlsx  interval_fragment
src/: duration.rs  fit.rs  gpx.rs  interval.rs  interval_parse.rs  kml.rs  lib.rs  main.rs  misc.rs  opt.rs  tcx.rs  xlsx.rs
