[package]
name = "nom_fun"
version = "0.1.0"
authors = ["Clifford T. Matthews <ctm@devctm.com>"]
edition = "2018"

[dependencies]
nom = "7.1.3"
roxmltree = "0.20.0"
chrono = { version = "0.4.39", default-features = false }
ordered-float = "4.6.0"
lazy_static = "1.5.0"
digital-duration-nom = { version = "0.5.0", path = "../../../digital-duration-nom" }
geo = "0.29.3"
clap = { version = "4.5.23", features = ["derive"] }
chrono-tz = "0.10.0"
iana-time-zone = "0.1.61"
