[package]
name = "nom_fun"
version = "0.1.0"
authors = ["Clifford T. Matthews <ctm@devctm.com>"]
edition = "2024"

[dependencies]
nom = { version = "8", default-features = false }
roxmltree = { version = "0.21", features = ["std"], default-features = false }
chrono = { version = "0.4.39", default-features = false }
ordered-float = { version = "5.0.0", default-features = false }
lazy_static = "1.5.0"
digital-duration-nom = { version = "0.6.0", path = "../../../digital-duration-nom" }
geo = { version = "0.32", default-features = false }
clap = { version = "4.5.23", features = ["derive"] }
chrono-tz = "0.10.0"
iana-time-zone = "0.1.61"
